# rangierapparat

./: .gitignore  Readme.md  rangieren.py  setup.cfg
fusion_model_files/: Test_nach_hinten_fahren.f3d  gesamtTest.f3d
rangierlib/: ausparken.py
src/rangierapparat/: rangieren.py
src/rangierapparat/rangierlib/: ablauf.py  ausparken.py  fsolver.py
src/rangierlib/: circle_intersections.py
