[metadata]
name = rangierapparat
version = 0.0.5
author = Matthias Mildenberger
author_email = regauf2@gmail.com
description = A package to park your car.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Frooob/rangierapparat
project_urls =
    Bug Tracker = https://github.com/Frooob/rangierapparat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src